# platelet-wcm

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  package-lock.json  pyproject.toml  requirements-platelet-ci.txt  requirements-viz.txt  requirements.txt  tui-demos.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-azure.yml
docker/runtime/: Dockerfile
docker/webapp/: Dockerfile
docs/: README.md  architecture.md  codebase-overview.md  create-pyenv.md  dev-tools.md  development-workflow.md  domain-overview.md  environment.md  getting-started.md  style-guide.md  validation-and-regressions.md
docs/papers/: README.md  ajanel-2025.md  argon-simen-1999.md  burkhart-2012.md  caride-2007.md  coller-1995.md  dolan-diamond-2014.md  dunster-2015.md  ghatge-2026.md  honore-vorum-2000.md  hoover-lewis-2011.md  huang-2021.md  inesi-1985.md  kleppe-2018.md  (+10 more)
platelet-plan/: architecture.md  overview.md
reports/: 4d-wcm-report.md  calcium-data-provenance.md  calcium-dynamics-design.md  calcium-signalling-pathway-design.md  caride-2007-pmca-rate-constants.md  colleagues-biology-issues-2026-05-23.md  dissertation-notes.md  lab-book-2026-03-27.md  lab-book-2026-04-29-calcium-equations.md  lab-book-2026-05-01-phase1-complete.md  onenote-summary.md  pandoc-header.tex  parca-module-notes.md  platelet-calcium-calibration.md  platelet-proteome-data-sources.md  platelet-wcm-feasibility-study.tex  reconstruction-platelet-design.md  report.tex  wcecoli-notes.md  wcecoli-rationale.md  wcecoli-vs-4dwcm.md  zotero-literature-analysis.md
(+284 files in other folders)
