[project]
name = "platelet-wcm"
version = "0.6.0"
description = "Whole-cell model of a human platelet (calcium signalling core + downstream modules)"
requires-python = ">=3.11"
# Core runtime: the simulation engine + analysis. The optional extras below
# carry the TUI/replay viz stack and the dev/test/typecheck toolchain.
dependencies = [
	"numpy==1.26.3",
	"scipy==1.11.4",
	"matplotlib==3.7.1",
	"Unum==4.2.1",
]

[project.optional-dependencies]
viz = [
	"textual==8.2.7",
	"textual-plotext==1.0.1",
	"plotext==5.3.2",
	"rich==15.0.0",
]
dev = [
	"pytest==9.0.3",
	"pytest-cov==4.1.0",
	"mock==5.0.2",
	"mypy==1.3.0",
	"mypy-extensions==1.0.0",
	"types-mock==5.0.0.6",
	"types-PyYAML==6.0.12.9",
	"types-requests==2.30.0.0",
	"ipython==8.13.2",
	"ipdb==0.13.13",
	"line-profiler==4.0.3",
]

# This is an application run via PYTHONPATH (no importable top-level package),
# so uv must not try to build/install the repo itself as a wheel.
[tool.uv]
package = false

[tool.pytest.ini_options]
markers = [
	"slow: tests that run a full simulation (>0.5 s). Skip in fast iteration with `pytest -m 'not slow'`.",
]
